# Hippoium

./: .gitignore  LICENSE  README.md  create.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/refactor/: ARCHITECTURE_MAP.md  BASELINE.md  MEMORY_CACHE_RETRIEVAL.md  PROMPT_SPEC.md  RELEASE_CHECKLIST.md  RISKS_AND_TARGETS.md
examples/: minimal.py  openai_live.py
hippoium/: bootstrap.py  decorators.py  engine.py  errors.py
hippoium/adapters/: __init__.py  base.py  openai.py  retry.py
hippoium/configs/: context_exchange.yaml
hippoium/core/: context_api.py  context_manager.py  hooks.py  neg_vault.py
hippoium/core/builder/: formatters.py  formatting.py  prompt_builder.py  slot_injector.py  template_registry.py
hippoium/core/cer/: cache.py  compressor.py  runtime.py  telemetry.py
hippoium/core/memory/: compression.py  lifecycle.py  sampler.py  stores.py  write_back.py
hippoium/core/negative/: auto_labeler.py  negative_engine.py  pattern_detector.py
hippoium/core/patch/: diff_generator.py  patch_manager.py
hippoium/core/retriever/: __init__.py  multi_source_retriever.py  scorer.py  universal_chunker.py
hippoium/core/routing/: complexity_scorer.py  cost_router.py  fallback_manager.py
hippoium/core/training/: lora_trainer.py  pair_builder.py
hippoium/core/utils/: hasher.py  serializer.py  token_counter.py
hippoium/factories/: __init__.py  cer_factory.py
hippoium/integrations/: mcp_bridge.py
hippoium/ports/: __init__.py  constants.py  domain.py  events.py  mcp.py  port_types.py  protocols.py  schemas.py  types.py
hippoium/utils/: convert_a2a.py  convert_mcp.py  converter_registry.py
tests/compression/: test_QwenLong-CPRS.py
tests/context/: test_hippoium_context_features.py  test_prompt_security_budget.py
tests/integration/: test_convert_a2a.py  test_convert_mcp.py  test_openai_cer.py
tests/retrieval/: chunker.py
tests/unit/: test_core_mock_clients.py  test_core_routing_mock.py  test_hooks.py  test_memory_cache.py  test_multi_source_retriever.py  test_openai_adapter.py  test_openai_retry.py  test_prompt_builder_budget.py  test_prompt_builder_defaults.py  test_prompt_builder_security.py  test_time_utils.py
