[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hippoium"
version         = "0.1.0"
description     = "Memory & context management layer for LLMs—dedupe, diff-patch, neg-RAG, hierarchical memory, auto LoRA corpus."
readme          = "README.md"
authors         = [{ name = "Hippoium Team", email = "dev@hippoium.ai" }]
license         = { file = "LICENSE" }
requires-python = ">=3.9"
keywords        = ["llm", "memory", "context", "rag", "prompt", "retrieval"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "openai>=1.10",
    "typing_extensions>=4.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=2.2",
    "tqdm>=4.66"
]

[project.optional-dependencies]
# Development / CI
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit"
]

# LoRA fine-tuning pipeline
train = [
    "torch>=2.3",
    "transformers>=4.41",
    "peft>=0.12"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hippoium*"]

[project.urls]
"Source" = "https://github.com/allanyiin/hippoium"
"Tracker" = "https://github.com/allanyiin/hippoium/issues"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806", "S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
